Fix bug where empty widget columns shrink too much

--- a/styles/widgets/_widget-board.scss
+++ b/styles/widgets/_widget-board.scss
@@ -10,6 +10,7 @@
 .widget-board-column {
   flex-grow: 1;
   flex-basis: 0;
+  min-width: 240px;
   display: flex;
   flex-direction: column;
   margin: 0 10px;
